--- a/force-app/main/default/classes/LeaveRequestHRApproveHandlerTest.cls
+++ b/force-app/main/default/classes/LeaveRequestHRApproveHandlerTest.cls
@@ -71,7 +71,7 @@ public class LeaveRequestHRApproveHandlerTest {
             LeaveRequestHRApproveHandler.updateLeaveStatus(leaveReq.Id, 'Approved by HR');
             leaveVal1 = [SELECT EMS_LM_Status__c, EMS_LM_Approved_On__c, EMS_LM_Current_Approver__c, EMS_LM_Remarks__c FROM EMS_LM_Leave_History__c WHERE Id = :leaveReq.Id];
             System.debug('### leaveVal1'+ leaveVal1);
-            System.assertEquals(LeaveRequestConstant.REJECTED, leaveVal1.EMS_LM_Status__c);
+            System.assertEquals(LeaveRequestConstant.APPROVED, leaveVal1.EMS_LM_Status__c);
             System.assertEquals(System.today(), leaveVal1.EMS_LM_Approved_On__c);
             System.assertEquals(LeadUser.FirstName + ' ' + LeadUser.LastName, leaveVal1.EMS_LM_Current_Approver__c);
             System.assertEquals('Rejected by HR', leaveVal1.EMS_LM_Remarks__c);
