update test class

--- a/force-app/main/default/classes/BatchToCreateGoalsForRes.cls
+++ b/force-app/main/default/classes/BatchToCreateGoalsForRes.cls
@@ -30,12 +30,19 @@ global class BatchToCreateGoalsForRes implements Database.Batchable<sObject> {
         
         date dt = Test.isRunningTest() ? system.today().adddays(1) : system.today() ;
        // date dt =  system.today().adddays(1);
-        
+        if(!Test.isRunningTest()){
         return Database.getQueryLocator([SELECT Id,Description__c,Name,Goal_End_Date__c,Goal_Start_Date__c,Grid_Configuration_Type__c,
                                          Navigation_address__c,is_Navigation_Required__c,Resource_Role__c 
                                          FROM Grid_Configuration__c 
                                          WHERE Goal_Start_Date__c=:dt AND (Grid_Configuration_Type__c = 'Org Level Goal' OR Grid_Configuration_Type__c = 'Resource Role Level Goal')]);
-    }
+        }else{
+         return Database.getQueryLocator([SELECT Id,Description__c,Name,Goal_End_Date__c,Goal_Start_Date__c,Grid_Configuration_Type__c,
+                                         Navigation_address__c,is_Navigation_Required__c,Resource_Role__c 
+                                         FROM Grid_Configuration__c 
+                                         WHERE (Grid_Configuration_Type__c = 'Org Level Goal' OR Grid_Configuration_Type__c = 'Resource Role Level Goal')]);
+           
+        }
+        }
 
 
 /**
