--- a/force-app/main/default/classes/newServiceRequestControllerTest.cls
+++ b/force-app/main/default/classes/newServiceRequestControllerTest.cls
@@ -4,22 +4,31 @@ public class newServiceRequestControllerTest {
     public testmethod static void  caseCreationTest(){
          newServiceRequestController.daysBetweenExcludingWeekends(system.now(),system.now().adddays(4));
          user adminuser = TestDataFactory.createAdminUser(true);
-         Resource_Role__c role = TestDataFactory.createResourceRole(true);
-         TestDataFactory.createLeaveType(true);
-         Account acc = TestDataFactory.createAccount(true);
-		 Contact con=  TestDataFactory.createResourceContact(acc.id, false);
+          Resource_Role__c role;
+         Account acc;Contact con;
+          system.runAs(adminuser){
+           role = TestDataFactory.createResourceRole(true);
+         TestDataFactory.createLeaveType('Annual Leave',true);
+        
+          acc = TestDataFactory.createAccount(true);
+		 con =  TestDataFactory.createResourceContact(acc.id, false);
          con.EMS_RM_Employee_Id__c = 'CP10234';
          con.Resource_Role__c = role.Id;
+         con.EMS_LM_No_Of_Maternity_Leaves_Credit__c = 0;
+         con.EMS_RM_ApplicantStatus_Update__c = 'Active';
+         con.RecordTypeId = ContactConstant.RESOURCE_RECORDTYPEID;
          insert con;
+        }
         User u;
+        Test.startTest();
         system.runAs(adminuser){
          u = Testdatafactory.createCommunityUserWithAccAndContact(acc.id,con.Id,true);
         }
         system.runAs(u){
-        Case cval = TestDataFactory.createCaseWithAccAndContact(acc.Id, con.Id, 'Problem', 'Problem', 'Test Subject', 'Test descrioyon sjd ', true);
+        Case cval = TestDataFactory.createCaseWithAccAndContact(acc.Id, con.Id, 'Change of Details', 'Educational Details', 'Test Subject', 'Test descrioyon sjd ', true);
          Case cval2 = TestDataFactory.createCaseWithAccAndContact(acc.Id, con.Id, 'Change Of Details', 'Bank Details', 'Test Subjectrr', 'Test descrioyon eresjd ', true);
           Case cval3 = TestDataFactory.createCaseWithAccAndContact(acc.Id, con.Id, 'Apply Resignation', 'Offboarding', 'Test Subjecterere', 'Test descrioyon eresjd ', true);
-         Test.startTest();
+        
           newServiceRequestController.getTheCurrentAccAndContactId();
           newServiceRequestController.getTheCurrentData();  
           newServiceRequestController.getTheCaseDetails(cval.Id);
